cli: Configure memory settings